--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -2,3 +2,5 @@
 @import "../node_modules/bootstrap/scss/bootstrap-reboot";
 @import "../node_modules/bootstrap/scss/bootstrap-grid";
 @import "../node_modules/font-awesome/scss/font-awesome";
+
+@import "custom";
