--- a/views/tesista/base.twig
+++ b/views/tesista/base.twig
@@ -16,7 +16,7 @@
 
   <body>
         <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-          <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="{{ url_base }}">{{ projectName }} || {{ tipoUsuario }} </a>
+          <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="{{ url_base }}index.php">{{ projectName }} || {{ tipoUsuario }} </a>
           <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap">
                <a class="nav-link" href="{{ url_base }}index.php?controller=Logout"><i class="fa fa-power-off"></i> Salir</a>
