--- a/views/tesista/informeUpload.twig
+++ b/views/tesista/informeUpload.twig
@@ -12,19 +12,20 @@
     <h1>Subir Informe</h1>
     <div class="card">
 
-      <div class="card-body">
+
+        <div class="card-body">
           <h3>Todavia no has subido tu informe ....</h3>
           <h4><strong>Paso 1.</strong> Selecciona tu informe en *.pdf.</h4>
 
+            <div class="progress" style="height: 1px;">
+              <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
 
           <div class="input-group">
             <div class="custom-file">
               <input type="file" class="custom-file-input" id="fileupload">
 
-              <label class="custom-file-label" for="fileupload">Selecciona un Archivo</label>
-              <!-- <div class="invalid-tooltip">
-                Please choose a unique and valid username.
-              </div> -->
+              <label class="custom-file-label" for="fileupload"></label>
             </div>
 
             <!-- <div class="input-group-append">
@@ -32,10 +33,8 @@
             </div> -->
           </div>
 
-      </div>
+        </div>
     </div>
-
-
 {% endblock %}
 
 {% block scripsts %}
