--- a/views/tesista/informeUpload.twig
+++ b/views/tesista/informeUpload.twig
@@ -2,6 +2,10 @@
 
 {% block content %}
 
+<div class="progress" style="height: 1px;">
+  <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ url_base }}index.php">Home</a></li>
@@ -12,26 +16,26 @@
     <h1>Subir Informe</h1>
     <div class="card">
 
-
         <div class="card-body">
           <h3>Todavia no has subido tu informe ....</h3>
-          <h4><strong>Paso 1.</strong> Selecciona tu informe en *.pdf.</h4>
+          <h4>Selecciona tu informe en *.pdf.</h4>
 
-            <div class="progress" style="height: 1px;">
-              <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+           <!-- <form method="post" action="index.php?controller=Upload" enctype="multipart/form-data">
+
+               <input id="input-b2" name="file" type="file" class="file" data-show-preview="false">
+
+               <button type="submit" class="btn btn-primary">Enviar</button>
+
+
+
+            </form> -->
+
+            <div class="input-group">
+              <div class="custom-file">
+                <input type="file" name="fileupload[]" class="custom-file-input" id="fileupload" multiple>
+                <label class="custom-file-label" for="fileupload"></label>
+              </div>
             </div>
-
-          <div class="input-group">
-            <div class="custom-file">
-              <input type="file" class="custom-file-input" id="fileupload">
-
-              <label class="custom-file-label" for="fileupload"></label>
-            </div>
-
-            <!-- <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button">Button</button>
-            </div> -->
-          </div>
 
         </div>
     </div>
