mejoras en el upload

--- a/views/tesista/base.twig
+++ b/views/tesista/base.twig
@@ -23,6 +23,7 @@
             </li>
           </ul>
         </nav>
+        {% block progressbar %}{% endblock %}
         <main role="main" class="container">
 
             {% block content %}{% endblock %}
