--- a/views/tesista/informeUpload.twig
+++ b/views/tesista/informeUpload.twig
@@ -1,10 +1,14 @@
 {% extends "base.twig" %}
 
-{% block content %}
-
-<div class="progress" style="height: 1px;">
+{% block progressbar %}
+<div class="progress" style="height: 5px;">
   <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
+{% endblock %}
+
+{% block content %}
+
+
 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
@@ -19,16 +23,6 @@
         <div class="card-body">
           <h3>Todavia no has subido tu informe ....</h3>
           <h4>Selecciona tu informe en *.pdf.</h4>
-
-           <!-- <form method="post" action="index.php?controller=Upload" enctype="multipart/form-data">
-
-               <input id="input-b2" name="file" type="file" class="file" data-show-preview="false">
-
-               <button type="submit" class="btn btn-primary">Enviar</button>
-
-
-
-            </form> -->
 
             <div class="input-group">
               <div class="custom-file">
