--- a/views/tesista/dashboard.twig
+++ b/views/tesista/dashboard.twig
@@ -8,7 +8,7 @@
 
     <div class="row">
         <div class="col-xs-6 col-sm-12 col-md-6">
-            <div class="card">
+            <div class="card mb-3">
               <div class="card-header">
                 informacion de tesis
               </div>
