--- a/views/tesista/informeUpload.twig
+++ b/views/tesista/informeUpload.twig
@@ -7,9 +7,6 @@
 {% endblock %}
 
 {% block content %}
-
-
-
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ url_base }}index.php">Home</a></li>
@@ -18,7 +15,7 @@
     </nav>
 
     <h1>Subir Informe</h1>
-    <div class="card">
+    <div class="card mb-3">
 
         <div class="card-body">
           <h3>Todavia no has subido tu informe ....</h3>
@@ -30,8 +27,11 @@
                 <label class="custom-file-label" for="fileupload"></label>
               </div>
             </div>
-
         </div>
+    </div>
+
+    <div id="testing">
+
     </div>
 {% endblock %}
 
