--- a/views/tesista/dashboard.twig
+++ b/views/tesista/dashboard.twig
@@ -23,6 +23,7 @@
                         </li>
                         <li class="list-group-item">Fechade emision: {{ item.pyresolucion_fecha }}</li>
                     {% endfor %}
+                        <li class="list-group-item">Tiene Proyecto: {{ hasProject }}</li>
                     </ul>
               </div>
             </div>
