--- a/views/tesista/informeUpload.twig
+++ b/views/tesista/informeUpload.twig
@@ -35,6 +35,7 @@
     {% else %}
 
         <h1>Ya tienes un Proyecto</h1>
+        <embed src="{{ proyectoArc }}" width="500" height="375"/>
 
     {% endif %}
 
