--- a/views/tesista/risingObservations.twig
+++ b/views/tesista/risingObservations.twig
@@ -9,6 +9,16 @@
         </ol>
     </nav>
 
+    {% if hasProject == 1 %}
+
+    <div class="alert alert-warning" role="alert">
+      <h4 class="alert-heading">Primero tienes que subir tu proyecto</h4>
+      <p>Todavia no tienes el proyecto subido dirigete a esta <a href="{{ url_base }}index.php?controller=InformeUpload">direccion</a> y sube tu proyecto para poder iniciar con las observaciones </p>
+
+    </div>
+
+    {% else %}
+
     <h1>Levantamiento de Observaciones</h1>
 
     <div class="card">
@@ -21,104 +31,70 @@
           <table class="table">
               <thead class="thead-dark">
                   <tr>
-                      <th>No</th>
                       <th>Fecha de Observacion</th>
                       <th>Actividad</th>
                       <th>Observacion</th>
                       <th>Levantamiento</th>
                       <th>Estado</th>
+                      <th>Corregir</th>
                   </tr>
               </thead>
               <tbody>
-
+                {% for item in arrayObs %}
                   <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
+                    <td>{{ item.Obsfecha_obs }}</td>
+                    <td>{{ item.Obsactividad }}</td>
+                    <td>{{ item.Obsobservacion}}</td>
+                    <td>{{ item.Obslevantamiento }}</td>
+                    <td>
+                        {% if item.Obsestado == 1 %}<span class="text-success">Lavantado</span>{% endif %}
+                        {% if item.Obsestado == 0 %}<span class="text-danger">No levantado</span>{% endif %}
+                    </td>
+                    <td><a href="{{ item.idobservacion }}" data-toggle="modal" data-target="#formInModal"><i class="fa fa-pencil" aria-hidden="true"></i></a></td>
                   </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">4</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">5</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">6</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">7</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">8</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">9</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">10</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-
-
+                {% endfor %}
               </tbody>
           </table>
         </div>
-
-
       </div>
     </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="formInModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">Levantar la Observacion</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+              <form>
+                <div class="form-group">
+                  <label for="recipient-name" class="col-form-label">Pagina:</label>
+                  <input type="text" class="form-control" id="recipient-name">
+                </div>
+                <div class="form-group">
+                  <label for="message-text" class="col-form-label">Levantamineto:</label>
+                  <textarea class="form-control" id="message-text"></textarea>
+                </div>
+              </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    {% endif %}
+
+    {% block scripsts %}
+        <script src="{{ url_base }}public/js/tesista/RisingObservations.js" ></script>
+    {% endblock %}
+
 
 {% endblock %}
