--- a/views/tesista/base.twig
+++ b/views/tesista/base.twig
@@ -32,8 +32,8 @@
 
         <footer class="footer">
           <div class="container">
-            <span class="text-muted">Hola puedes contibuir con el este proyecto en el repositorio
-                <a href="https://github.com/carnadaxxx/observaciones"><i class="fa fa-github" aria-hidden="true"></i>Observaciones</a>.
+            <span class="text-muted">Hola, tienes alguna sugerencia o quieres mejorar el software revisa el codigo fuente en
+                <a href="https://github.com/carnadaxxx/observaciones" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>Observaciones</a>.
             </span>
           </div>
         </footer>
